Removed short open tags

--- a/view/frontend/templates/categories.phtml
+++ b/view/frontend/templates/categories.phtml
@@ -18,5 +18,5 @@ if (!is_countable($categories) || empty(count($categories))) {
                 <a href="<?= $category->getUrl(); ?>"><?= $category->getName(); ?></a>
             </div>
         </div>
-    <? endforeach; ?>
+    <?php endforeach; ?>
 </div>
