Added aspect ratio to category image

--- a/view/frontend/web/css/breeze/_default.less
+++ b/view/frontend/web/css/breeze/_default.less
@@ -18,6 +18,7 @@
 
             .magepow-categories-category-image {
                 flex-grow: 1;
+                aspect-ratio: 1;
             }
         }
     }
